feat(server-express): delete Task API (#19)
* Add API test

* Add path to Open API spec

* Enhance repository

* Enhance domain service

* Implement API
