# server/express/resources/api.yaml
@@ -65,6 +65,23 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Task"
+        "404":
+          description: Not Found
+    delete:
+      operationId: deleteTask
+      summary: Delete a task by key
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "204":
+          description: No Content
+        "404":
+          description: Not Found
   /Tasks:
     get:
       operationId: getTasks
