# server/express/src/api/index.ts
@@ -1,2 +1,2 @@
-export { createTask, getTask, getTasks, updateTask } from "./task";
+export { createTask, deleteTask, getTask, getTasks, updateTask } from "./task";
 export { ping } from "./ping";
